Thu Aug  9 22:48:58 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_unpack): when unpack('M') occurs an illegal byte
	  sequence, output the "=" character and the following character in
	  the decoded data without any transformation.
	  [ruby-dev:44875] [Bug #5635]

Tue Jul 31 10:36:12 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: updated to released version.

	* ext/psych/psych.gemspec: ditto

Thu Jul 19 09:33:46 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/emitter.c (initialize): allow a configuration object to be
	  passed to the constructor so that mutation isn't required after
	  instantiation.

	* ext/psych/lib/psych/handler.rb: add configuration object

	* ext/psych/lib/psych/visitors/emitter.rb: use configuration object if
	  extra configuration is present.

Tue Jul 17 03:56:34 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: strings with YAML anchors
	  are properly referenced. Patched by Joe Rafaniello via Github:
	    https://github.com/tenderlove/psych/pull/69
	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto
	* test/psych/test_alias_and_anchor.rb: test for change

Sat Jun 16 01:27:14 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bumping psych to 1.3.3
	* ext/psych/psych.gemspec: ditto

Fri May 18 15:53:05 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/psych/extconf.rb: Use an exception instaed of bare abort.

Fri May 18 01:28:21 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (transcode_string): fix encoding index names.
	  Thanks markizko for reporting.

Wed May 16 05:11:29 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: fix a bug with string
	  subclass dumping and loading.

	* test/psych/test_array.rb: pertinent tests

	* test/psych/test_string.rb: ditto
